{
    "name": "Inputs",
    "maps": [
        {
            "name": "MapAction",
            "id": "b47c42c7-9e7b-4e65-84f9-2b738c2828f4",
            "actions": [
                {
                    "name": "OpenMap",
                    "type": "Button",
                    "id": "02958dbf-d2da-4a15-a600-493e0fdc714f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": false
                },
                {
                    "name": "CloseMap",
                    "type": "Button",
                    "id": "fe97cc14-4402-4381-b1da-be229b8ede0f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e2451078-12b3-4e9f-86c4-bb247bf1e474",
                    "path": "<Keyboard>/m",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "OpenMap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4c32a151-bf07-48c9-bf2c-9e06459e00da",
                    "path": "<Keyboard>/m",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "CloseMap",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}